Optimizaciones y mejoras a sincronizacion